--- a/pytest.ini
+++ b/pytest.ini
@@ -2,9 +2,11 @@
 minversion = 8.0
 
 # Hvor pytest leder efter tests
-testpaths = tests
+testpaths =
+    tests/venues
+    tests/integration
 
-# Hvilke filer/klasser/funktioner tælles som tests
+# Test discovery
 python_files = test_*.py *_test.py
 python_classes = Test*
 python_functions = test_*
@@ -12,7 +14,7 @@ python_functions = test_*
 # Sørg for at projektroden er på import-stien
 pythonpath = .
 
-# Ignorer støjende mapper (venv, git, cache, artefakter, observability)
+# Ignorer støjende mapper
 norecursedirs =
     .git
     .venv
@@ -27,10 +29,10 @@ norecursedirs =
     ops
     docs
 
-# Asyncio-integration (kræver pytest-asyncio >= 0.20)
+# Asyncio-integration
 asyncio_mode = auto
 
-# Markers (brug --strict-markers for at fange stavefejl)
+# Markers
 markers =
     asyncio: mark test as asyncio-based
     slow: Langsomme tests (kan skippes i hurtige kørsler)
@@ -52,17 +54,18 @@ addopts =
     --timeout=30
     --durations=10
     --color=yes
-    # coverage – brug .coveragerc til kilder/omit
-    --cov
-    --cov-config=.coveragerc
+    # Coverage – mål kun de ændrede/testede moduler (DOT-notation)
+    --cov=bot.live_connector.venues.okx
+    --cov=bot.live_connector.metrics
+    --cov-branch
+    --cov-context=test
     --cov-report=term-missing:skip-covered
     --cov-report=html
     --cov-report=xml:reports/coverage.xml
-    # midlertidigt mål – hæv når flere tests er på plads
     --cov-fail-under=40
     # CI-artefakt
     --junitxml=reports/junit.xml
-    # ignorer filer/mapper som ikke er tests
+    # Ignorer filer/mapper som ikke er tests
     --ignore=test.txt
     --ignore=README.md
     --ignore=outputs
@@ -70,7 +73,7 @@ addopts =
     --ignore=notebooks
     --ignore=ops
     --ignore=docs
-    # 🔧 Midlertidigt: udeluk tunge/native tests globalt (matcher CI)
+    # Midlertidigt: udeluk tunge/native tests globalt (matcher CI)
     -k "not heavy and not talib and not pandas_ta"
 
 # Undertryk specifikke, kendte advarsler
@@ -78,17 +81,17 @@ filterwarnings =
     ignore:.*'H' is deprecated and will be removed in a future version.*:FutureWarning
     ignore:Failed to extract font properties.*:UserWarning
 
-# CLI logging (nyttigt når tests fejler på CI)
+# CLI logging
 log_cli = true
 log_cli_level = INFO
 log_cli_format = %(levelname)s %(message)s
 log_cli_date_format = %H:%M:%S
 
-# Fejlfinder (stopper hængende tests pænt)
+# Fejlfinder
 faulthandler_timeout = 60
 
-# Streng xfail (xfail tælles som fejl hvis de pludselig passerer)
+# Streng xfail
 xfail_strict = true
 
-# Cache-sti (holder ro i repoet)
+# Cache-sti
 cache_dir = .pytest_cache
