CI: begræns coverage til Fase-3 moduler (okx+kraken+metrics)

--- a/pytest.ini
+++ b/pytest.ini
@@ -54,9 +54,12 @@ addopts =
     --timeout=30
     --durations=10
     --color=yes
-    # coverage – brug .coveragerc til kilder/omit
-    --cov
-    --cov-config=.coveragerc
+    # Coverage – mål kun Fase-3 modulerne
+    --cov=bot.live_connector.metrics
+    --cov=bot.live_connector.venues.okx
+    --cov=bot.live_connector.venues.kraken
+    --cov-branch
+    --cov-context=test
     --cov-report=term-missing:skip-covered
     --cov-report=html
     --cov-report=xml:reports/coverage.xml
