Fase 3: Ekstra venues (OKX + Kraken) – skelet, parsere, tests og observability (#5)
* Fase 3: Kraken connector (skelet + dataflow + tests + observability) (#3)

* Fase 3: OKX connector (skelet + dataflow + tests + observability) (#2)

* feat(okx): skelet til OKX connector + config + kontrakter + promtool case

* Kode-fix i bot/__init__.py (robust også uden env)

* Kode-fix i bot/__init__.py (robust også uden env)

* Kode-fix i .github/workflows/observability.yml

* tests: skip torch device test when torch is missing; tolerate CPU-only

* ci: retrigger alerting

* CI(alerting): brug promtool via entrypoint og pin PROM_VERSION; tilføj rule-placeholders; gør workflow robust

* CI(alerting): fix promtool entrypoint + pin version + ensure rule placeholders

* CI(observability): robust curl/head (undgå exit 23), sikre rule-filer, promtool via entrypoint, ekstra artefakter

* CI(alerting): mount alerts.yml+recording_rules.yml for promtool check config

* CI(alerting): mount alerts.yml+recording_rules.yml for promtool check config

* OKX connector: end-to-end parse + metrics hardening
- Reload-sikker Prometheus registry (avoid duplicated timeseries)
- Clean candle parser + symbol mapping helper
- Promtool rule tests incl. OKX cases
- PyTest coverage scope tuned (~70% on touched modules)
- Metrics smoke verified locally

* CI: fix promtool/amtool i GitHub Actions
- Brug --entrypoint=promtool med prom/prometheus:v2.53.0
- Brug --entrypoint=amtool med prom/alertmanager:v0.27.0
- Pin versioner og stramme mounts for determinisme
- Gør promtool/alerting-jobs grønne

* Auto-update CHANGELOG.md [skip ci]

* feat(kraken): connector skelet + candle parser (array/dict) + golden/integration tests + metrics bootstrap

- config: venues/kraken.yml og symbol_map.yaml (XBT/USDT, ETH/USDT)
- tests: unit + golden replay, ingen netværk
- metrics: sikre auto-init/bootstrap konsistent på scrape

* README.md

* CI: begræns coverage til Fase-3 moduler (okx+kraken+metrics)

--- a/config/symbol_map.yaml
+++ b/config/symbol_map.yaml
@@ -1,4 +1,10 @@
-## config/symbol_map.yaml
+# ============================
+# config/symbol_map.yaml
+# ----------------------------
+# Intern -> per-venue mapping.
+# Hold det fladt (binance/okx/kraken: <exchange-symbol>) for
+# maksimal kompatibilitet med connector-koden/tests.
+# ============================
 
 
 # Intern -> per-venue mapping
@@ -6,7 +12,34 @@ BTCUSDT:
   binance: BTCUSDT
   okx: BTC-USDT
   kraken: XBT/USDT
+
 ETHUSDT:
   binance: ETHUSDT
   okx: ETH-USDT
   kraken: ETH/USDT
+
+SOLUSDT:
+  binance: SOLUSDT
+  okx: SOL-USDT
+  kraken: SOL/USDT
+
+ADAUSDT:
+  binance: ADAUSDT
+  okx: ADA-USDT
+  kraken: ADA/USDT
+
+XRPUSDT:
+  binance: XRPUSDT
+  okx: XRP-USDT
+  kraken: XRP/USDT
+
+LTCUSDT:
+  binance: LTCUSDT
+  okx: LTC-USDT
+  kraken: LTC/USDT
+
+# --- Noter ---
+# 1) Tilføj flere symboler ved at følge samme mønster.
+# 2) Sørg for, at 'kraken' matcher præcis det par Kraken udsender (fx "XBT/USDT").
+# 3) Dine connectors kan nøjes med at læse de tre nøgler: binance, okx, kraken.
+
