--- a/pytest.ini
+++ b/pytest.ini
@@ -54,9 +54,10 @@ addopts =
     --timeout=30
     --durations=10
     --color=yes
-    # Coverage – mål kun de ændrede/testede moduler (DOT-notation)
-    --cov=bot.live_connector.venues.okx
+    # Coverage – mål kun Fase-3 modulerne
     --cov=bot.live_connector.metrics
+    --cov=bot.live_connector.venues.okx
+    --cov=bot.live_connector.venues.kraken
     --cov-branch
     --cov-context=test
     --cov-report=term-missing:skip-covered
@@ -80,6 +81,9 @@ addopts =
 filterwarnings =
     ignore:.*'H' is deprecated and will be removed in a future version.*:FutureWarning
     ignore:Failed to extract font properties.*:UserWarning
+    ignore:.*websockets\.legacy is deprecated.*:DeprecationWarning
+    ignore:.*WebSocketServerProtocol is deprecated.*:DeprecationWarning
+    ignore:.*Please use `import python_multipart` instead.*:PendingDeprecationWarning
 
 # CLI logging
 log_cli = true
