chore(git): normalize line endings according to .gitattributes

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,16 +5,17 @@ minversion = 8.0
 testpaths =
     tests/venues
     tests/integration
+    tests/persistence
 
 # Test discovery
 python_files = test_*.py *_test.py
 python_classes = Test*
 python_functions = test_*
 
-# Sørg for at projektroden er på import-stien
+# Sørg for at projektroden er på import-stien (muliggør from utils import ...)
 pythonpath = .
 
-# Ignorer støjende mapper
+# Ignorer støjende/ikke-test mapper
 norecursedirs =
     .git
     .venv
@@ -25,6 +26,8 @@ norecursedirs =
     outputs
     logs
     backups
+    archives
+    artifacts
     mlruns
     ops
     docs
@@ -43,6 +46,7 @@ markers =
     heavy: Tunge tests der kræver native deps/store datasæt
     talib: Tests der kræver TA-Lib
     pandas_ta: Tests der kræver pandas_ta
+    persistence: Fase-4 persistens/filhygiejne tests (utils/artifacts, rotation, arkiv)
 
 # Standard-flags
 addopts =
@@ -54,17 +58,18 @@ addopts =
     --timeout=30
     --durations=10
     --color=yes
-    # Coverage – mål kun Fase-3 modulerne
+    # Coverage – Fase 3 + Fase 4 (persistens)
     --cov=bot.live_connector.metrics
     --cov=bot.live_connector.venues.okx
     --cov=bot.live_connector.venues.kraken
+    --cov=utils.artifacts
     --cov-branch
     --cov-context=test
     --cov-report=term-missing:skip-covered
     --cov-report=html
     --cov-report=xml:reports/coverage.xml
     --cov-fail-under=40
-    # CI-artefakt
+    # CI-artefakt (JUnit)
     --junitxml=reports/junit.xml
     # Ignorer filer/mapper som ikke er tests
     --ignore=test.txt
@@ -74,6 +79,8 @@ addopts =
     --ignore=notebooks
     --ignore=ops
     --ignore=docs
+    --ignore=archives
+    --ignore=artifacts
     # Midlertidigt: udeluk tunge/native tests globalt (matcher CI)
     -k "not heavy and not talib and not pandas_ta"
 
@@ -84,6 +91,7 @@ filterwarnings =
     ignore:.*websockets\.legacy is deprecated.*:DeprecationWarning
     ignore:.*WebSocketServerProtocol is deprecated.*:DeprecationWarning
     ignore:.*Please use `import python_multipart` instead.*:PendingDeprecationWarning
+    ignore:.*distutils package is deprecated.*:DeprecationWarning
 
 # CLI logging
 log_cli = true
